samples/_failures_safe/1761458305_e26b28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa485753.c: In function ‘main’:
./samples/SAFE/__tmp_aa485753.c:206:5: error: expected expression at end of input
  206 |     if (token_count <=
      |     ^~
./samples/SAFE/__tmp_aa485753.c:206:5: error: expected declaration or statement at end of input
